less clunky, more funky, performance boost lid page, prevent 'flickering' UI elements when scope data is loaded

--- a/less/ga-placeholders.less
+++ b/less/ga-placeholders.less
@@ -5,9 +5,5 @@
   background-color: rgba(131, 127, 127, 0.26);
   width: 100%;
   border-radius: 10px;
-  filter: blur(4px);
-  -webkit-filter: blur(4px);
-  -moz-filter: blur(4px);
-  -o-filter: blur(4px);
-  -ms-filter: blur(4px);
+  .blur();
 }
